syntax = "proto3";

package pulumirpc;

import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

service Analyzer {
    // Analyze analyzes a single resource.
    rpc Analyze(AnalyzeRequest) returns (AnalyzeResponse);

    // AnalyzeStack analyzes the set of resources that comprise a stack.
    rpc AnalyzeStack(AnalyzeStackRequest) returns (AnalyzeStackResponse);

    // GetAnalyzerInfo returns metadata about the analyzer.
    rpc GetAnalyzerInfo(google.protobuf.Empty) returns (AnalyzerInfo);

    // GetPluginInfo returns information about the plugin.
    rpc GetPluginInfo(google.protobuf.Empty) returns (PluginInfo);

    // Configure configures the analyzer.
    rpc Configure(ConfigureRequest) returns (google.protobuf.Empty);
}

message AnalyzeRequest {
    string type = 1;
    google.protobuf.Struct properties = 2;
    string urn = 3;
    string name = 4;
    AnalyzerOptions options = 5;
    string provider = 6;
}

message AnalyzeResponse {
    repeated AnalyzeDiagnostic diagnostics = 2;
}

message AnalyzeStackRequest {
    repeated AnalyzerResource resources = 1;
}

message AnalyzeStackResponse {
    repeated AnalyzeDiagnostic diagnostics = 1;
}

message AnalyzerResource {
    string type = 1;
    google.protobuf.Struct properties = 2;
    string urn = 3;
    string name = 4;
    string provider = 5;
}

message AnalyzeDiagnostic {
    string policyName = 1;
    string policyPackName = 2;
    string policyPackVersion = 3;
    string description = 4;
    string message = 5;
    repeated string tags = 6;
    string enforcementLevel = 7; // e.g., "advisory", "mandatory", "disabled"
    string urn = 8;
}

message AnalyzerInfo {
    string name = 1;
    string displayName = 2;
    repeated AnalyzerPolicyInfo policies = 3;
}

message AnalyzerPolicyInfo {
    string name = 1;
    string displayName = 2;
    string description = 3;
    string enforcementLevel = 4;
    google.protobuf.Struct configSchema = 5;
}

message PluginInfo {
    string version = 1;
}

message ConfigureRequest {
    map<string, string> variables = 1;
    map<string, string> args = 2;
}

message AnalyzerOptions {
    bool supportsPreview = 1;
}
